TAA-220: Log Rotation, separation and clarity
Separate the builds and those with artifacts, and provide under
new logRotation key.

(cherry picked from commit e81bc0739c9011840879a0a0347d6e839c284d77)

--- a/gitops/env/stage2/templates/jenkins.yaml
+++ b/gitops/env/stage2/templates/jenkins.yaml
@@ -217,10 +217,8 @@ spec:
                           }
                         }
                         logRotator {
-                          artifactDaysToKeep({{ .Values.config.workloads.android.daysToKeep }})
-                          artifactNumToKeep({{ .Values.config.workloads.android.numToKeep }})
-                          daysToKeep({{ .Values.config.workloads.android.daysToKeep }})
-                          numToKeep({{ .Values.config.workloads.android.numToKeep }})
+                          daysToKeep({{ .Values.config.workloads.android.logRotation.daysToKeep }})
+                          numToKeep({{ .Values.config.workloads.android.logRotation.numToKeep }})
                         }
                         definition {
                           cpsScm {
@@ -250,10 +248,8 @@ spec:
                           }
                         }
                         logRotator {
-                          artifactDaysToKeep({{ .Values.config.workloads.android.daysToKeep }})
-                          artifactNumToKeep({{ .Values.config.workloads.android.numToKeep }})
-                          daysToKeep({{ .Values.config.workloads.android.daysToKeep }})
-                          numToKeep({{ .Values.config.workloads.android.numToKeep }})
+                          daysToKeep({{ .Values.config.workloads.android.logRotation.daysToKeep }})
+                          numToKeep({{ .Values.config.workloads.android.logRotation.numToKeep }})
                         }
                         definition {
                           cpsScm {
@@ -288,10 +284,8 @@ spec:
                           }
                         }
                         logRotator {
-                          artifactDaysToKeep({{ .Values.config.workloads.android.daysToKeep }})
-                          artifactNumToKeep({{ .Values.config.workloads.android.numToKeep }})
-                          daysToKeep({{ .Values.config.workloads.android.daysToKeep }})
-                          numToKeep({{ .Values.config.workloads.android.numToKeep }})
+                          daysToKeep({{ .Values.config.workloads.android.logRotation.daysToKeep }})
+                          numToKeep({{ .Values.config.workloads.android.logRotation.numToKeep }})
                         }
                         definition {
                           cpsScm {
@@ -323,10 +317,8 @@ spec:
                           }
                         }
                         logRotator {
-                          artifactDaysToKeep({{ .Values.config.workloads.android.daysToKeep }})
-                          artifactNumToKeep({{ .Values.config.workloads.android.numToKeep }})
-                          daysToKeep({{ .Values.config.workloads.android.daysToKeep }})
-                          numToKeep({{ .Values.config.workloads.android.numToKeep }})
+                          daysToKeep({{ .Values.config.workloads.android.logRotation.daysToKeep }})
+                          numToKeep({{ .Values.config.workloads.android.logRotation.numToKeep }})
                         }
                         definition {
                           cpsScm {
@@ -358,10 +350,8 @@ spec:
                           }
                         }
                         logRotator {
-                          artifactDaysToKeep({{ .Values.config.workloads.android.daysToKeep }})
-                          artifactNumToKeep({{ .Values.config.workloads.android.numToKeep }})
-                          daysToKeep({{ .Values.config.workloads.android.daysToKeep }})
-                          numToKeep({{ .Values.config.workloads.android.numToKeep }})
+                          daysToKeep({{ .Values.config.workloads.android.logRotation.daysToKeep }})
+                          numToKeep({{ .Values.config.workloads.android.logRotation.numToKeep }})
                         }
                         definition {
                           cpsScm {
@@ -391,10 +381,8 @@ spec:
                           }
                         }
                         logRotator {
-                          artifactDaysToKeep({{ .Values.config.workloads.android.daysToKeep }})
-                          artifactNumToKeep({{ .Values.config.workloads.android.numToKeep }})
-                          daysToKeep({{ .Values.config.workloads.android.daysToKeep }})
-                          numToKeep({{ .Values.config.workloads.android.numToKeep }})
+                          daysToKeep({{ .Values.config.workloads.android.logRotation.daysToKeep }})
+                          numToKeep({{ .Values.config.workloads.android.logRotation.numToKeep }})
                         }
                         definition {
                           cpsScm {
@@ -424,10 +412,8 @@ spec:
                           }
                         }
                         logRotator {
-                          artifactDaysToKeep({{ .Values.config.workloads.android.daysToKeep }})
-                          artifactNumToKeep({{ .Values.config.workloads.android.numToKeep }})
-                          daysToKeep({{ .Values.config.workloads.android.daysToKeep }})
-                          numToKeep({{ .Values.config.workloads.android.numToKeep }})
+                          daysToKeep({{ .Values.config.workloads.android.logRotation.daysToKeep }})
+                          numToKeep({{ .Values.config.workloads.android.logRotation.numToKeep }})
                         }
                         definition {
                           cpsScm {
@@ -457,10 +443,10 @@ spec:
                           }
                         }
                         logRotator {
-                          artifactDaysToKeep({{ .Values.config.workloads.android.daysToKeep }})
-                          artifactNumToKeep({{ .Values.config.workloads.android.numToKeep }})
-                          daysToKeep({{ .Values.config.workloads.android.daysToKeep }})
-                          numToKeep({{ .Values.config.workloads.android.numToKeep }})
+                          artifactDaysToKeep({{ .Values.config.workloads.android.logRotation.artifactDaysToKeep }})
+                          artifactNumToKeep({{ .Values.config.workloads.android.logRotation.artifactNumToKeep }})
+                          daysToKeep({{ .Values.config.workloads.android.logRotation.daysToKeep }})
+                          numToKeep({{ .Values.config.workloads.android.logRotation.numToKeep }})
                         }
                         definition {
                           cpsScm {
@@ -482,10 +468,10 @@ spec:
                       pipelineJob('Android/Tests/CTS Execution') {
                         description('<p>Run the CTS test harness against Cuttlefish Virtual Device images.</p>')
                         logRotator {
-                          artifactDaysToKeep({{ .Values.config.workloads.android.daysToKeep }})
-                          artifactNumToKeep({{ .Values.config.workloads.android.numToKeep }})
-                          daysToKeep({{ .Values.config.workloads.android.daysToKeep }})
-                          numToKeep({{ .Values.config.workloads.android.numToKeep }})
+                          artifactDaysToKeep({{ .Values.config.workloads.android.logRotation.artifactDaysToKeep }})
+                          artifactNumToKeep({{ .Values.config.workloads.android.logRotation.artifactNumToKeep }})
+                          daysToKeep({{ .Values.config.workloads.android.logRotation.daysToKeep }})
+                          numToKeep({{ .Values.config.workloads.android.logRotation.numToKeep }})
                         }
                         definition {
                           cpsScm {
@@ -507,10 +493,10 @@ spec:
                       pipelineJob('Android/Tests/CVD Launcher') {
                         description('<p>Launches Cuttlefish Virtual Devices (CVD) on the Cuttlefish Virtual Machine instances created by GCE from Cuttlefish instance templates</p>')
                         logRotator {
-                          artifactDaysToKeep({{ .Values.config.workloads.android.daysToKeep }})
-                          artifactNumToKeep({{ .Values.config.workloads.android.numToKeep }})
-                          daysToKeep({{ .Values.config.workloads.android.daysToKeep }})
-                          numToKeep({{ .Values.config.workloads.android.numToKeep }})
+                          artifactDaysToKeep({{ .Values.config.workloads.android.logRotation.artifactDaysToKeep }})
+                          artifactNumToKeep({{ .Values.config.workloads.android.logRotation.artifactNumToKeep }})
+                          daysToKeep({{ .Values.config.workloads.android.logRotation.daysToKeep }})
+                          numToKeep({{ .Values.config.workloads.android.logRotation.numToKeep }})
                         }
                         definition {
                           cpsScm {
