--- a/gitops/env/stage2/values.yaml
+++ b/gitops/env/stage2/values.yaml
@@ -16,8 +16,11 @@ config:
     android:
       url: https://github.com/AGBG-ASG/acn-horizon-sdv
       branch: env/dev
-      daysToKeep: 28
-      numToKeep: 100
+      logRotation:
+        artifactDaysToKeep: 60
+        artifactNumToKeep: 100
+        daysToKeep: 60
+        numToKeep: 200
 spec:
   destination:
     server: https://kubernetes.default.svc
