TAA-560: pin gerrit and gerrit operator versions (#323)

--- a/gitops/env/stage2/apps/gerrit/templates/gerrit.yaml
+++ b/gitops/env/stage2/apps/gerrit/templates/gerrit.yaml
@@ -20,6 +20,9 @@ metadata:
   annotations:
     argocd.argoproj.io/sync-wave: "4"
 spec:
+  containerImages:
+    gerritImages:
+      tag: v0.1-764-g2f33a537b8-3.11.1-489-g177cc22f91
   eventsBroker:
     brokerType: NONE
   storage:
