TAA-556: remove dependencies on environment variables (#321)
* TAA-556: remove dependencies on environment variables

* TAA-556: remove dependencies on environment variables - adding cloud region and zone

--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -187,6 +187,11 @@ jobs:
           echo "TF_VAR_sdv_gh_keycloak_initial_password=${{ secrets.gh-keycloak-initial-password }}" >> $GITHUB_ENV
           echo "TF_VAR_sdv_gh_gerrit_admin_initial_password=${{ secrets.gh-gerrit-admin-initial-password }}" >> $GITHUB_ENV
           echo "TF_VAR_sdv_gh_keycloak_horizon_admin_password=${{ secrets.gh-keycloak-horizon-admin-password }}" >> $GITHUB_ENV
+          echo "TF_VAR_sdv_gcp_project_id=${{ vars.GCP_PROJECT_ID }}" >> $GITHUB_ENV;
+          echo "TF_VAR_sdv_computer_sa=${{ vars.GCP_COMPUTER_SA }}" >> $GITHUB_ENV;
+          echo "TF_VAR_sdv_gcp_cloud_region=${{ vars.GCP_CLOUD_REGION }}" >> $GITHUB_ENV;
+          echo "TF_VAR_sdv_gcp_cloud_zone=${{ vars.GCP_CLOUD_ZONE }}" >> $GITHUB_ENV;
+          echo "TF_VAR_sdv_gh_domain_name=${{ vars.HORIZON_DOMAIN }}" >> $GITHUB_ENV;
 
           if [[ "${{ secrets.gcp-sa }}" != '' && "${{ secrets.wif-provider }}" != '' ]]; then
             echo "GCP_SA=${{ secrets.gcp-sa }}" >> $GITHUB_ENV;
@@ -301,9 +306,11 @@ jobs:
         id: tfplan
         env:
           TF_VAR_sdv_gh_access_token: ${{ steps.get_github_app_token.outputs.token }}
+          TF_VAR_sdv_gh_repo_name: ${{ github.event.repository.full_name }}
+          TF_VAR_sdv_gh_env_name: ${{ inputs.environment }}
         run: |
           git config --global url."https://x-access-token:${{steps.get_github_app_token.outputs.token}}@github.com".insteadOf https://github.com
-          terraform init -input=false
+          terraform init -input=false -backend-config bucket="${{ vars.GCP_BACKEND_BUCKET_NAME }}"
           terraform plan -parallelism=${{ inputs.parallelism }} -input=false -no-color -out=tfplan && terraform show -no-color tfplan
         continue-on-error: true
 
@@ -356,6 +363,8 @@ jobs:
         if: inputs.environment != ''
         env:
           TF_VAR_sdv_gh_access_token: ${{ steps.get_github_app_token.outputs.token }}
+          TF_VAR_sdv_gh_repo_name: ${{ github.event.repository.full_name }}
+          TF_VAR_sdv_gh_env_name: ${{ inputs.environment }}
         run: |
           git config --global url."https://x-access-token:${{steps.get_github_app_token.outputs.token}}@github.com".insteadOf https://github.com
           terraform apply -parallelism=${{ inputs.parallelism }} -input=false -no-color tfplan
