--- a/gitops/env/stage2/templates/gerrit.yaml
+++ b/gitops/env/stage2/templates/gerrit.yaml
@@ -89,6 +89,14 @@ spec:
   source:
     repoURL: {{ .Values.spec.source.repoURL }}
     targetRevision: {{ .Values.spec.source.targetRevision }}
+    helm:
+      values: |
+        config:
+          domain: {{ .Values.config.domain }}
+        spec:
+          source:
+            repoURL: {{ .Values.spec.source.repoURL }}
+            targetRevision: {{ .Values.spec.source.targetRevision }}
     path: gitops/env/stage2/apps/gerrit
   destination:
     server: https://kubernetes.default.svc
