TAA-566: jenkins-home-volume to pd-balanced

--- a/gitops/env/stage2/templates/jenkins-init.yaml
+++ b/gitops/env/stage2/templates/jenkins-init.yaml
@@ -8,7 +8,7 @@ provisioner: pd.csi.storage.gke.io
 volumeBindingMode: Immediate
 reclaimPolicy: Delete
 parameters:
-  type: pd-standard
+  type: pd-balanced
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
