TAA-567: Include htop to pipeline instances
Misc: Block CF instance template if Docker Image template
      is running.

--- a/workloads/android/pipelines/environment/cf_instance_template/Jenkinsfile
+++ b/workloads/android/pipelines/environment/cf_instance_template/Jenkinsfile
@@ -44,7 +44,7 @@ pipeline {
 
   // Block concurrent builds to avoid clashing.
   options {
-    buildBlocker (useBuildBlocker: true, blockLevel: 'GLOBAL', scanQueueFor: 'BUILDABLE', blockingJobs: '.*CF.*Template.*')
+    buildBlocker (useBuildBlocker: true, blockLevel: 'GLOBAL', scanQueueFor: 'BUILDABLE', blockingJobs: '.*Template.*')
   }
 
   parameters {
