--- a/workloads/android/pipelines/environment/docker_image_template/Dockerfile
+++ b/workloads/android/pipelines/environment/docker_image_template/Dockerfile
@@ -26,7 +26,7 @@ RUN apt-get update -y && \
     g++-multilib libncurses5 libssl-dev python3 python3-setuptools python3-pip \
     python3-requests python3-venv python3-virtualenv procps \
     meson bc coreutils dosfstools e2fsprogs fdisk kpartx mtools ninja-build \
-    pkg-config rsync less curl sudo vim ssh findutils gawk jq && \
+    pkg-config rsync less curl sudo vim ssh findutils gawk jq htop && \
     apt-get update -y && apt install -y npm nodejs && \
     rm -rf /var/lib/apt/lists/*
 
