--- a/workloads/android/pipelines/environment/docker_image_template/Dockerfile
+++ b/workloads/android/pipelines/environment/docker_image_template/Dockerfile
@@ -38,7 +38,7 @@ RUN curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | \
     gpg --dearmor -o /usr/share/keyrings/cloud.google.gpg && \
     echo "deb [signed-by=/usr/share/keyrings/cloud.google.gpg] https://packages.cloud.google.com/apt cloud-sdk main" | \
     tee -a /etc/apt/sources.list.d/google-cloud-sdk.list && \
-    apt-get update -y && apt-get install -y google-cloud-cli && \
+    apt-get update -y && apt-get install -y google-cloud-cli kubectl && \
     apt-get -y clean
 # GCS:END
 
