--- a/.github/workflows/terraform_workflow.yaml
+++ b/.github/workflows/terraform_workflow.yaml
@@ -16,16 +16,25 @@ name: Terraform
 
 on:
   push:
+    branches:
+      - env/**
+      - feature/**
     paths:
       - "terraform/*"
-    branches: ["env/*"]
+  pull_request:
+    branches:
+      - env/**
+      - feature/**
+    paths:
+      - 'terraform/*'
   workflow_dispatch:
 
 jobs:
-  parsing_branch:
+  parsing-branch:
     runs-on: self-hosted
     outputs:
-      branch: ${{ steps.branch.outputs.parsed_branch }}
+      branch_env: ${{ steps.branch.outputs.branch_env }}
+      prefix: ${{ steps.branch.outputs.prefix_part }}
       parsed_branch: ${{ steps.branch.outputs.parsed_branch }}
     steps:
       - name: Checkout code
@@ -36,11 +45,14 @@ jobs:
         run: |
           BRANCH_NAME=${GITHUB_REF_NAME#refs/heads/}
           PARSED_BRANCH_NAME=${BRANCH_NAME#*/}
-          echo "branch_name=$BRANCH_NAME" >> $GITHUB_OUTPUT
+          PARSED_BRANCH_ENV=${PARSED_BRANCH_NAME%%/*}
+          PREFIX_BRANCH=${BRANCH_NAME%%/*}
+          echo "branch_env=$PARSED_BRANCH_ENV" >> $GITHUB_OUTPUT
           echo "parsed_branch=$PARSED_BRANCH_NAME" >> $GITHUB_OUTPUT
+          echo "prefix_part=$PREFIX_BRANCH" >> $GITHUB_OUTPUT
 
   terraform:
-    needs: parsing_branch
+    needs: parsing-branch
     uses: ./.github/workflows/terraform.yaml
     concurrency:
       group: terraform
@@ -63,5 +75,6 @@ jobs:
       gh-cuttlefish-vm-ssh-private-key: ${{ secrets.CUTTLEFISH_VM_SSH_PRIVATE_KEY }}
     with:
       terraform-version: 1.9.6
-      environment: ${{ needs.parsing_branch.outputs.parsed_branch }}
+      branch_env: ${{ needs.parsing-branch.outputs.branch_env }}
+      prefix: ${{ needs.parsing-branch.outputs.prefix }}
       directory: terraform/env
